# cc.recast

./: .gitignore  .gitmodules  README.md  package.json  tsconfig.json
recastnavigation-js/: CMakeLists.txt  CMakePresets.json  build.ps1  index.html
recastnavigation-js/src/wrapper/Common/: Vec3.h
recastnavigation-js/src/wrapper/Detour/: Detour.cpp
recastnavigation-js/src/wrapper/Recast/: Recast.cpp
recastnavigation-js/test/browser/: index.html  recast.js
src/: NavMesh.ts
